RESOLVED FIXED73123
Web Inspector: unflake timeline-network tests
https://bugs.webkit.org/show_bug.cgi?id=73123
Summary Web Inspector: unflake timeline-network tests
Pavel Feldman
Reported 2011-11-25 04:09:42 PST
We should capture stack only when it makes sense. Otherwise loading from cache results in different data sets (stacks) than regular load.
Attachments
Patch (17.08 KB, patch)
2011-11-25 04:22 PST, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2011-11-25 04:22:15 PST
Yury Semikhatsky
Comment 2 2011-11-25 06:25:44 PST
Comment on attachment 116598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116598&action=review > Source/WebCore/inspector/InspectorTimelineAgent.cpp:178 > pushCurrentRecord(TimelineRecordFactory::createEventDispatchData(event), style: put this code on a single line?
Pavel Feldman
Comment 3 2011-11-25 06:32:38 PST
Note You need to log in before you can comment on or make changes to this bug.